# molinfer-learning

./: Dockerfile  README.md  docker-compose.override.yml  docker-compose.yaml  pyproject.toml
backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/src/: log_config.py  main.py  routes.py
backend/src/config/: __init__.py  cors.py  log_config.py
backend/tests/: __init__.py  test_routes.py
frontend/: Dockerfile
frontend/app/: page.tsx
frontend/app/components/: FileUpload.tsx
frontend/src/app/components/: FileUpload.tsx
sample/: sample_100.sdf
src/: main.py
src/backend/: __init__.py
src/static/: index.html
